# filament-extruder

./: .gitmodules  README.md
hardware/control-board/: .gitignore  control-board.kicad_pcb  control-board.kicad_prl  control-board.kicad_pro  control-board.kicad_sch
hardware/control-board/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
software/firmware/main/: CMakeLists.txt  compile_commands.json
software/firmware/main/config/: stm32h7xx_hal_conf.h
software/firmware/main/middlewares/: CMakeLists.txt
software/firmware/main/middlewares/CDC/: usbd_conf.c
software/firmware/main/middlewares/CDC/include/: usbd_conf.h
software/firmware/main/src/: CMakeLists.txt  core_interrupts.cpp  main.cpp  syscalls.cpp
software/firmware/main/src/clock/: CMakeLists.txt  clock.cpp  systick.cpp
software/firmware/main/src/clock/include/: clock.hpp
software/firmware/main/src/configs/: CMakeLists.txt  config.hpp
software/firmware/main/src/configs/configs/: FOC.hpp  debug.hpp  encoder.hpp  inverter.hpp  peripherals.hpp
software/firmware/main/src/configs/configs/encoder/: ABZ.hpp
software/firmware/main/src/configs/configs/peripherals/: adc.hpp  uart.hpp  usb.hpp
software/firmware/main/src/debug/include/: debug.hpp
software/firmware/main/src/encoder/MT6701/: MT6701.cpp
software/firmware/main/src/encoder/MT6701/include/: MT6701.hpp
software/firmware/main/src/inverter/: inverter.cpp
software/firmware/main/src/inverter/include/: inverter.hpp
software/firmware/main/src/peripherals/: CMakeLists.txt
software/firmware/main/src/peripherals/adc/: adc.cpp
software/firmware/main/src/peripherals/adc/include/: adc.hpp
software/firmware/main/src/peripherals/cordic/: cordic.cpp
software/firmware/main/src/peripherals/gpio/: gpio.cpp
software/firmware/main/src/peripherals/gpio/include/: gpio.hpp
software/firmware/main/src/peripherals/msp/: hal_msp_init.cpp
software/firmware/main/src/peripherals/spi/: spi.cpp
software/firmware/main/src/peripherals/spi/include/: spi.hpp
software/firmware/main/src/peripherals/uart/: uart.cpp
software/firmware/main/src/peripherals/uart/include/: uart.hpp
software/firmware/main/src/peripherals/usb/: usb.cpp  usb_device.c  usbd_cdc_if.c  usbd_desc.c
software/firmware/main/src/peripherals/usb/include/: usb_device.h  usbd_cdc_if.h
